// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facet filter list item  should render collapsed filter 1`] = `
<FacetsFilterListItem
  classes={
    Object {
      "listItemGutters": "FacetsFilterListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterListItem-listText-2",
    }
  }
  disabled={false}
  facetTitle="Test title"
  nestedItems="Test filter"
  onToggle={[MockFunction]}
  open={true}
/>
`;

exports[`Facet filter list item  should render disabled component 1`] = `
<FacetsFilterListItem
  classes={
    Object {
      "listItemGutters": "FacetsFilterListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterListItem-listText-2",
    }
  }
  disabled={true}
  facetTitle="Test title"
  nestedItems={Array []}
  onToggle={[MockFunction]}
  open={false}
/>
`;

exports[`Facet filter list item  should render empty component 1`] = `
<FacetsFilterListItem
  classes={
    Object {
      "listItemGutters": "FacetsFilterListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterListItem-listText-2",
    }
  }
  disabled={false}
  facetTitle="Test title"
  nestedItems={Array []}
  onToggle={[MockFunction]}
  open={false}
/>
`;
